# google-game-sdk

./: .gitignore  README.md  settings.gradle
GameActivity/: README.md  build.gradle
GameActivity/prefab-src/: prefab.json
GameActivity/prefab-src/modules/game-activity/include/game-activity/: GameActivity.cpp  GameActivityEvents.cpp  GameActivityEvents.h
GameActivity/prefab-src/modules/game-activity/include/game-text-input/: gamecommon.h  gametextinput.cpp  gametextinput.h
GameActivity/src/main/: AndroidManifest.xml
GameActivity/src/main/java/com/google/androidgamesdk/: GameActivity.java  gametextinput
GameController/: build.gradle
GameController/src/androidTest/java/com/google/android/games/paddleboat/: ExampleInstrumentedTest.java
GameController/src/main/: AndroidManifest.xml
GameController/src/main/cpp/: CMakeLists.txt
GameController/src/main/java/com/google/android/games/paddleboat/: GameControllerListener.java  GameControllerManager.java  GameControllerThread.java  GuardedBy.java
GameController/src/test/cpp/: CMakeLists.txt  paddleboat_tests.cpp
GameTextInput/: README.md  build.gradle
GameTextInput/prefab-src/: prefab.json
GameTextInput/src/main/: AndroidManifest.xml
gradle/wrapper/: gradle-wrapper.properties
lib-game-sdk/: build.gradle
src/extras/: build.gradle
